feat: 增加日志支持并调整配置文件结构
- 在AreaTemplateGenerator类中添加@Slf4j注解，启用日志记录
- 修改loadProperties方法，支持传入ClassLoader并增加异常日志打印
- 将控制台输出改为使用log.info打印，替代System.out.println
- 调整.gitignore文件，统一日志文件夹路径匹配规则
- 新增document模块的logback.xml配置，实现日志文件分割与错误日志独立输出
- 更改database和net模块的logback.xml日志文件路径配置为对应子目录
- document模块pom.xml中增加slf4j-api和logback-classic依赖用于日志支持